force-app/main/default/objects/CECInverters__x/CECInverters__x.object-meta.xml
<CustomObject>
    <description>CECInverters</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>CECInverters</externalName>
    <label>CECInverters</label>
    <pluralLabel>CECInverters</pluralLabel>
</CustomObject>