force-app/main/default/objects/CECInverters__x/fields/ActiveAntiIslandMethod__c.field-meta.xml
<CustomField>
    <fullName>ActiveAntiIslandMethod__c</fullName>
    <description>ActiveAntiIslandMethod</description>
    <externalDeveloperName>ActiveAntiIslandMethod</externalDeveloperName>
    <label>ActiveAntiIslandMethod</label>
    <length>128</length>
    <type>Text</type>
</CustomField>