force-app/main/default/objects/CECInverters__x/fields/AgreedToTermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>AgreedToTermsAndConditions__c</fullName>
    <description>AgreedToTermsAndConditions</description>
    <externalDeveloperName>AgreedToTermsAndConditions</externalDeveloperName>
    <label>AgreedToTermsAndConditions</label>
    <length>128</length>
    <type>Text</type>
</CustomField>