force-app/main/default/objects/CECInverters__x/fields/ApplicableStandards__c.field-meta.xml
<CustomField>
    <fullName>ApplicableStandards__c</fullName>
    <description>ApplicableStandards</description>
    <externalDeveloperName>ApplicableStandards</externalDeveloperName>
    <label>ApplicableStandards</label>
    <length>128</length>
    <type>Text</type>
</CustomField>