force-app/main/default/objects/CECInverters__x/fields/ApplicableStandardsOther__c.field-meta.xml
<CustomField>
    <fullName>ApplicableStandardsOther__c</fullName>
    <description>ApplicableStandardsOther</description>
    <externalDeveloperName>ApplicableStandardsOther</externalDeveloperName>
    <label>ApplicableStandardsOther</label>
    <length>128</length>
    <type>Text</type>
</CustomField>