force-app/main/default/objects/CECInverters__x/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>ApprovalDate</description>
    <externalDeveloperName>ApprovalDate</externalDeveloperName>
    <label>ApprovalDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>