force-app/main/default/objects/CECInverters__x/fields/ApprovingBody__c.field-meta.xml
<CustomField>
    <fullName>ApprovingBody__c</fullName>
    <description>ApprovingBody</description>
    <externalDeveloperName>ApprovingBody</externalDeveloperName>
    <label>ApprovingBody</label>
    <length>128</length>
    <type>Text</type>
</CustomField>