force-app/main/default/objects/CECInverters__x/fields/AS3100Tested__c.field-meta.xml
<CustomField>
    <fullName>AS3100Tested__c</fullName>
    <description>AS3100Tested</description>
    <externalDeveloperName>AS3100Tested</externalDeveloperName>
    <label>AS3100Tested</label>
    <length>128</length>
    <type>Text</type>
</CustomField>