force-app/main/default/objects/CECInverters__x/fields/AS4777Tested__c.field-meta.xml
<CustomField>
    <fullName>AS4777Tested__c</fullName>
    <description>AS4777Tested</description>
    <externalDeveloperName>AS4777Tested</externalDeveloperName>
    <label>AS4777Tested</label>
    <length>128</length>
    <type>Text</type>
</CustomField>