force-app/main/default/objects/CECInverters__x/fields/BatteryCertifyingBody__c.field-meta.xml
<CustomField>
    <fullName>BatteryCertifyingBody__c</fullName>
    <description>BatteryCertifyingBody</description>
    <externalDeveloperName>BatteryCertifyingBody</externalDeveloperName>
    <label>BatteryCertifyingBody</label>
    <length>128</length>
    <type>Text</type>
</CustomField>