force-app/main/default/objects/CECInverters__x/fields/CECApproved__c.field-meta.xml
<CustomField>
    <fullName>CECApproved__c</fullName>
    <description>CECApproved</description>
    <externalDeveloperName>CECApproved</externalDeveloperName>
    <label>CECApproved</label>
    <length>128</length>
    <type>Text</type>
</CustomField>