force-app/main/default/objects/CECInverters__x/fields/CECLimitWithinInverterRange__c.field-meta.xml
<CustomField>
    <fullName>CECLimitWithinInverterRange__c</fullName>
    <description>CECLimitWithinInverterRange</description>
    <externalDeveloperName>CECLimitWithinInverterRange</externalDeveloperName>
    <label>CECLimitWithinInverterRange</label>
    <length>128</length>
    <type>Text</type>
</CustomField>