force-app/main/default/objects/CECInverters__x/fields/CECLimitWithinInverterRangeReason__c.field-meta.xml
<CustomField>
    <fullName>CECLimitWithinInverterRangeReason__c</fullName>
    <description>CECLimitWithinInverterRangeReason</description>
    <externalDeveloperName>CECLimitWithinInverterRangeReason</externalDeveloperName>
    <label>CECLimitWithinInverterRangeReason</label>
    <length>128</length>
    <type>Text</type>
</CustomField>