force-app/main/default/objects/CECInverters__x/fields/CertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber__c</fullName>
    <description>CertificateNumber</description>
    <externalDeveloperName>CertificateNumber</externalDeveloperName>
    <label>CertificateNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>