force-app/main/default/objects/CECInverters__x/fields/EquipmentCategory__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCategory__c</fullName>
    <description>EquipmentCategory</description>
    <externalDeveloperName>EquipmentCategory</externalDeveloperName>
    <label>EquipmentCategory</label>
    <length>128</length>
    <type>Text</type>
</CustomField>