force-app/main/default/objects/CECInverters__x/fields/ForTesting__c.field-meta.xml
<CustomField>
    <fullName>ForTesting__c</fullName>
    <description>ForTesting</description>
    <externalDeveloperName>ForTesting</externalDeveloperName>
    <label>ForTesting</label>
    <length>128</length>
    <type>Text</type>
</CustomField>