force-app/main/default/objects/CECInverters__x/fields/InverterNumber__c.field-meta.xml
<CustomField>
    <fullName>InverterNumber__c</fullName>
    <description>InverterNumber</description>
    <externalDeveloperName>InverterNumber</externalDeveloperName>
    <label>InverterNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>