force-app/main/default/objects/CECInverters__x/fields/IsBattery__c.field-meta.xml
<CustomField>
    <fullName>IsBattery__c</fullName>
    <description>IsBattery</description>
    <externalDeveloperName>IsBattery</externalDeveloperName>
    <label>IsBattery</label>
    <length>128</length>
    <type>Text</type>
</CustomField>