force-app/main/default/objects/CECInverters__x/fields/IsDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsDisabled__c</fullName>
    <description>IsDisabled</description>
    <externalDeveloperName>IsDisabled</externalDeveloperName>
    <label>IsDisabled</label>
    <length>128</length>
    <type>Text</type>
</CustomField>