force-app/main/default/objects/CECInverters__x/fields/IsSolar__c.field-meta.xml
<CustomField>
    <fullName>IsSolar__c</fullName>
    <description>IsSolar</description>
    <externalDeveloperName>IsSolar</externalDeveloperName>
    <label>IsSolar</label>
    <length>128</length>
    <type>Text</type>
</CustomField>