force-app/main/default/objects/CECInverters__x/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Manufacturer</description>
    <externalDeveloperName>Manufacturer</externalDeveloperName>
    <label>Manufacturer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>