force-app/main/default/objects/CECInverters__x/fields/MultiInverterCombinationsTested__c.field-meta.xml
<CustomField>
    <fullName>MultiInverterCombinationsTested__c</fullName>
    <description>MultiInverterCombinationsTested</description>
    <externalDeveloperName>MultiInverterCombinationsTested</externalDeveloperName>
    <label>MultiInverterCombinationsTested</label>
    <length>128</length>
    <type>Text</type>
</CustomField>