force-app/main/default/objects/CECInverters__x/fields/NominalACPower__c.field-meta.xml
<CustomField>
    <fullName>NominalACPower__c</fullName>
    <description>NominalACPower</description>
    <externalDeveloperName>NominalACPower</externalDeveloperName>
    <label>NominalACPower</label>
    <length>128</length>
    <type>Text</type>
</CustomField>