force-app/main/default/objects/CECInverters__x/fields/Phases__c.field-meta.xml
<CustomField>
    <fullName>Phases__c</fullName>
    <description>Phases</description>
    <externalDeveloperName>Phases</externalDeveloperName>
    <label>Phases</label>
    <length>128</length>
    <type>Text</type>
</CustomField>