force-app/main/default/objects/CECInverters__x/fields/PQModeCosPower__c.field-meta.xml
<CustomField>
    <fullName>PQModeCosPower__c</fullName>
    <description>PQModeCosPower</description>
    <externalDeveloperName>PQModeCosPower</externalDeveloperName>
    <label>PQModeCosPower</label>
    <length>128</length>
    <type>Text</type>
</CustomField>