force-app/main/default/objects/CECInverters__x/fields/PQModeFixedPFactor__c.field-meta.xml
<CustomField>
    <fullName>PQModeFixedPFactor__c</fullName>
    <description>PQModeFixedPFactor</description>
    <externalDeveloperName>PQModeFixedPFactor</externalDeveloperName>
    <label>PQModeFixedPFactor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>