force-app/main/default/objects/CECInverters__x/fields/PQModeRateLimit__c.field-meta.xml
<CustomField>
    <fullName>PQModeRateLimit__c</fullName>
    <description>PQModeRateLimit</description>
    <externalDeveloperName>PQModeRateLimit</externalDeveloperName>
    <label>PQModeRateLimit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>