force-app/main/default/objects/CECInverters__x/fields/PQModeVoltBalance__c.field-meta.xml
<CustomField>
    <fullName>PQModeVoltBalance__c</fullName>
    <description>PQModeVoltBalance</description>
    <externalDeveloperName>PQModeVoltBalance</externalDeveloperName>
    <label>PQModeVoltBalance</label>
    <length>128</length>
    <type>Text</type>
</CustomField>