force-app/main/default/objects/CECInverters__x/fields/PQModeVoltVar__c.field-meta.xml
<CustomField>
    <fullName>PQModeVoltVar__c</fullName>
    <description>PQModeVoltVar</description>
    <externalDeveloperName>PQModeVoltVar</externalDeveloperName>
    <label>PQModeVoltVar</label>
    <length>128</length>
    <type>Text</type>
</CustomField>