force-app/main/default/objects/CECInverters__x/fields/PQModeVoltWatt__c.field-meta.xml
<CustomField>
    <fullName>PQModeVoltWatt__c</fullName>
    <description>PQModeVoltWatt</description>
    <externalDeveloperName>PQModeVoltWatt</externalDeveloperName>
    <label>PQModeVoltWatt</label>
    <length>128</length>
    <type>Text</type>
</CustomField>