force-app/main/default/objects/CECInverters__x/fields/SalesforceInverterCertID__c.field-meta.xml
<CustomField>
    <fullName>SalesforceInverterCertID__c</fullName>
    <description>SalesforceInverterCertID</description>
    <externalDeveloperName>SalesforceInverterCertID</externalDeveloperName>
    <label>SalesforceInverterCertID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>