force-app/main/default/objects/CECInverters__x/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>Series</description>
    <externalDeveloperName>Series</externalDeveloperName>
    <label>Series</label>
    <length>128</length>
    <type>Text</type>
</CustomField>