force-app/main/default/objects/CECInverters__x/fields/TestedToIEC62116__c.field-meta.xml
<CustomField>
    <fullName>TestedToIEC62116__c</fullName>
    <description>TestedToIEC62116</description>
    <externalDeveloperName>TestedToIEC62116</externalDeveloperName>
    <label>TestedToIEC62116</label>
    <length>128</length>
    <type>Text</type>
</CustomField>