force-app/main/default/objects/CECInverters__x/fields/TradingNames__c.field-meta.xml
<CustomField>
    <fullName>TradingNames__c</fullName>
    <description>TradingNames</description>
    <externalDeveloperName>TradingNames</externalDeveloperName>
    <label>TradingNames</label>
    <length>128</length>
    <type>Text</type>
</CustomField>